--- a/_posts/2021-09-14-0913-0919.md
+++ b/_posts/2021-09-14-0913-0919.md
@@ -204,3 +204,212 @@ react에서는 불변 객체인 것 처럼 객체를 사용하라고 하는데,
 arguments는 유사배열인데, 배열이 가지고 있는 유용한 메서드들을 사용할 수 없다.
 
 모든 객체는 프로토타입 객체를 갖는다. 프로토타입 객체가 없으면 상속을 못받는다.
+
+## 0916
+
+# 49일 차
+
+# 19장 프로토타입
+
+원시 타입의 값을 제외한 나머지 값들, 자바스크립트를 이루고 있는 거의 모든 것이 객체다.
+
+## 객체지향 프로그래밍
+
+독립적 단위인 객체를 집합으로 프로그램을 표현하려는 프로그래밍 패러다임  
+다양한 속성 중에 필요한 속성만 간추려 내어 표현하는 것을 **추상화**라고 한다.  
+객체는 **상태 데이터와 동작을 하나의 논리적인 단위로 묶은 복합적인 자료구조**  
+이때 객체의 상태 데이터를 프로퍼티, 동작을 메서드라 부른다.
+
+## 상속과 프로토타입
+
+상속은 어떤 객체의 프로퍼티 또는 메서드를 다른 객체가 상속받아 그대로 사용할 수 있는 것을 말한다.  
+-> JS는 프로토타입을 기반으로 상속을 구현하여 불필요한 중복을 제거한다.
+
+```javascript
+function Circle(radius) {
+  this.radius = radius;
+  this.getArea = function () {
+    return Math.PI * this.radius ** 2;
+  };
+}
+
+const circle1 = new Circle(1);
+const circle2 = new Circle(2);
+
+console.log(circle1.getArea === circle2.getArea); // false
+```
+
+- radius 프로퍼티 값은 일반적으로 인스턴스마다 다르다.
+- 하지만 getArea 메서드는 모든 인스턴스가 동일한 내용의 메서드를 사용하므로 단 하나만 생성하여 모든 인스턴스가 공유해서 사용하는 것이 바람직하다.
+- 위와 같이 코드를 작성하면 새로운 인스턴스를 생성할 때마다 getArea 메서드를 중복 생성하고 모든 인스턴스가 중복 소유한다.  
+  -> 메모리 낭비, 성능 저하
+
+```javascript
+function Circle(radius) {
+  this.radius = radius;
+}
+
+Circle.prototype.getArea = function () {
+  return Math.PI * this.radius ** 2;
+};
+
+const circle1 = new Circle(1);
+const circle2 = new Circle(2);
+
+console.log(circle1.getArea === circle2.getArea); // true
+```
+
+- 자바스크립트는 프로토타입을 기반으로 상속을 구현한다.
+- Circle 생성자 함수가 생성한 모든 인스턴스는 자신의 프로토타입, 즉 상위 객체 역할을 하는 Circle.prototype의 모든 프로퍼티와 메서드를 상속받늗나.
+- 생성자 함수가 생성할 모든 인스턴스가 공통적으로 사용할 프로퍼티나 메서드를 프로토타입에 미리 구현해 두면 인스턴스는 별도의 구현 없이 상위 객체인 프로토타입의 자산을 공유하여 사용할 수 있다.
+
+## 프로토타입 객체
+
+프로토타입 객체란 객체지향 프로그래밍의 근간을 이루는 객체 간 상속을 구현하기 위해 사용한다.
+
+- 프로토타입을 상속받은 하위 객체는 상위 객체의 프로퍼티를 자신의 프로퍼티처럼 자유롭게 사용할 수 있다.
+- 모든 객체는 `[[prototype]]`이라는 내부 슬롯을 가지며, 이 내부 슬롯의 값은 프로토타입의 참조다.
+- `[[prototype]]`에 저장되는 프로토타입은 객체 생성 방식에 의해 결정된다.
+  - 즉, 객체가 생성될 때 객체 생성 방식에 따라 프로토타입이 결정되고 `[[prototype]]`에 저장된다.
+- 모든 객체는 하나의 프로토타입을 갖고, 모든 프로토타입은 생성자 함수와 연결되어 있다.
+  - `[[prototype]]` 내부 슬롯의 값이 null인 객체는 프로토타입이 없다.
+- `[[prototype]]` 내부 슬롯에 직접 접근할 수는 없지만, `__proto__` 접근자 프로퍼티를 통해 자신의 프로토타입 내부 슬롯이 가리키는 프로토타입에 간접적으로 접근할 수 있다.
+- 프로토타입은 자신의 constructor 프로퍼티를 통해 생성자 함수에 접근할 수 있고, 생성자 함수는 자신의 prototype 프로퍼티를 통해 프로토타입에 접근할 수 있다.
+
+### `__proto__` 접근자 프로퍼티
+
+모든 객체는 `__proto__` 접근자 프로퍼티를 통해 자신의 프로토타입, 즉 `[[prototype]]` 내부 슬롯에 간접적으로 접근할 수 있다.
+
+1. `__proto__`는 접근자 프로퍼티다.
+   내부 슬롯에는 직접 접근할 수 없기에 간접적으로 접근해야 한다. `Object.prototype`의 접근자 프로퍼티인 `__proto__`는 접근자 함수를 통해 `__proto__` 내부 슬롯의 값, 즉 프로토타입을 취득하거나 할당한다.
+
+2. `__proto__` 접근자 프로퍼티는 상속을 통해 사용된다.
+   `__proto__` 접근자 프로퍼티는 객체가 직접 소유하는 프로퍼티가 아니라 Object.prototype의 프로퍼티다. 모든 객체는 상속을 통해 `__proto__` 접근자 프로퍼티를 사용할 수 있다.
+
+3. `__proto__` 접근자 프로퍼티를 통해 프로토타입에 접근하는 이유
+   상호 참조에 의해 프로토타입 체인이 생성되는 것을 방지하기 위해서다.
+
+4. `__proto__` 접근자 프로퍼티를 코드 내에서 직접 사용하는 것은 권장하지 않는다.
+
+- 직접 상속을 통해 Object.prototype을 상속받지 않는 객체를 생성할 수도 있기 때문에 `__proto__` 접근자 프로퍼티를 사용할 수 없는 경우가 있다.
+- 따라서 프로토타입의 참조를 취득하고 싶은 경우에는 `Object.getPrototypeOf` 메서드를 사용하고, 프로토타입을 교체하고 싶은 경우에는 `Object.setPrototypeOf` 메서드를 사용한다.
+- 두 메서드는 `__proto__`의 처리내용과 정확히 일치한다.
+
+```javascript
+const parent = {};
+const child = {};
+// child의 프로토타입을 parent로 설정
+child.__proto__ = parent;
+// parent의 프로토타입을 child로 설정
+parent.__proto__ = child; // TypeError: Cyclic __proto__ value
+```
+
+- 위와 같은 코드가 에러 없이 정상적으로 처리되면 서로가 자신의 프로토타입이 되는 비정상적인 프로토타입 체인이 만들어지기 때문에 `__proto__` 접근자 프로퍼티는 에러를 발생시킨다.
+- 프로토타입 체인은 단방향 링크드 리스트로 구현되어야 한다.
+- 아무런 체크 없이 무조건적으로 프로토타입을 교체할 수 없도록 `__proto__`를 통해 프로토타입에 접근하고 교체하도록 구현되어 있다.
+
+### 함수 객체의 prototype 프로퍼티
+
+- 함수 객체만이 소유하는 prototype 프로퍼티는 생성자 함수가 생성할 인스턴스의 프로토타입을 가리킨다.
+- 따라서 생성자 함수로서 호출할 수 없는 non-constructor는 prototype 프로퍼티를 소유하지 않고 프로토타입도 생성하지 않는다.
+- 모든 객체가 가지고 있는 `__proto__` 접근자 프로퍼티와 함수 객체만이 가지고 있는 prototype 프로퍼티는 동일한 프로토타입을 가리킨다.
+
+### 프로토타입의 constructor 프로퍼티와 생성자 함수
+
+- 모든 프로토타입은 constructor 프로퍼티를 갖는데, 이 프로퍼티는 prototype 프로퍼티로 자신을 참조하고 있는 생성자 함수를 가리킨다.
+- 이 연결은 생성자 함수 객체가 생성될 때 이뤄진다.
+- me 객체는 프로토타입의 constructor 프로퍼티를 상속받아 사용할 수 있기에 이를 통해 생성자 함수와 연결된다.
+
+## 리터럴 표기법에 의해 생성된 객체의 생성자 함수와 프로토타입
+
+- 리터럴 표기법에 의해 생성된 객체도 물론 프로토타입이 존재한다.
+- 하지만 프로토타입의 constructor 프로퍼티가 가리키는 생성자 함수가 반드시 객체를 생성한 생성자 함수라고 단정할 수 없다.
+
+```javascript
+const obj = {};
+
+console.log(obj.constructor); // [Function: Object]
+```
+
+- obj 객체는 Object 생성자 함수로 생성한 객체가 아니라 객체 리터럴에 의해 생성된 객체이다.
+- 하지만 obj 객체는 Object 생성자 함수와 constructor 프로퍼티로 연결되어 있다.
+- Object 생성자 함수 호출과 객체 리터럴의 평가는 추상 연산 OrdinaryObjectCreate를 호출하여 빈 객체를 생성하는 점에서 동일하나 세부 내용은 다르다.
+- 따라서 객체 리터럴에 의해 생성된 객체는 Object 생성자 함수가 생성한 객체가 아니다.
+- 함수 역시 함구 객체를 생성한 것은 Function 생성자가 아니지만 constructor 프로퍼티를 통해 확인해보면 생성자 함수는 Function 함수다.
+- 리터럴 표기법에 의해 생성된 객체도 상속을 위해 프로토타입이 필요하다. 따라서 가상적인 생성자 함수를 갖는다.
+- 프로토타입은 생성자 함수와 더불어 생성되며 prototype, constructor 프로퍼티에 의해 연결되어 있기 때문이다.
+- **프로토타입과 생성자 함수는 단독으로 존재할 수 없고 언제나 쌍으로 존재한다.**
+- 리터럴 표기법에 의해 생성된 객체는 생성자 함수에 의해 생성된 객체는 아니지만, constructor 프로퍼티를 통해 연결되어 있는 생성자 함수를 리터럴 표기법으로 생성한 객체를 생성한 생성자 함수로 생각해도 크게 무리는 없다.
+
+## 프로토타입의 생성 시점
+
+**프로토타입은 생성자 함수가 생성되는 시점에 더불어 생성된다**  
+-> 프로토타입과 생성자 함수는 단독으로 존재할 수 없고 언제나 쌍으로 존재하기 때문이다.
+
+### 사용자 정의 생성자 함수와 프로토타입 생성 시점
+
+- constructor는 함수 정의가 평가되어 함수 객체를 생성하는 시점에 프로토타입도 더불어 생성된다.
+- 생성자 함수로서 호출할 수 없는 함수, non-constructor는 프로토타입이 생성되지 않는다.
+- 생성된 프로토타입은 오직 constructor 프로퍼티만을 갖는 객체다.
+- 사용자 정의 생성자 함수는 자신이 평가되어 함수 객체로 생성되는 시점에 프로토타입도 더불어 생성되며, 생성된 프로토타입의 프로토타입은 Object.prototype이다.
+
+### 빌트인 생성자 함수와 프로토타입 생성 시점
+
+- Object, String, Number, Function, Array, RegExp, Date, Promise 등과 같은 빌트인 생성자 함수도 일반 함수와 마찬가지로 빌트인 생성자 함수가 생성되는 시점에 프로토타입이 생성된다.
+- 모든 빌트인 생성자 함수는 전역 객체가 생성되는 시점에 생성된다.
+- 생성된 프로토타입은 빌트인 생성자 함수의 prototype 프로퍼티에 바인딩된다.
+- 전역 객체는 코드가 실행되기 이전 단계에 JS 엔진에 의해 생성되는 특수한 객체다.
+- 표준 빌트인 객체인 Object도 전역 객체의 프로퍼티이며, 전역 객체가 생성되는 시점에 생성된다.
+- 이후 생성자 함수 또는 리터럴 표기법으로 객체를 생성하면 프로토타입은 생성된 객체의 `[[Prototype]]` 내부 슬롯에 할당된다.
+  - 이로써 생성된 객체는 프로토타입을 상속받는다.
+
+## 객체 생성 방식과 프로토타입의 결정
+
+객체는 다양한 생성 방식이 있다. 다양한 방식으로 생성된 객체는 세부적인 차이는 있지만 추상 연산 OrdinaryObjectCreate에 의해 생성된다는 공통점이 있다.
+
+- 추상 연산 OrdinaryObjectCreate는 필수적으로 자신이 생성할 객체의 프로토타입을 인수로 전달받는다.
+- 빈 객체를 생성한 후, 객체에 추가할 프로퍼티 목록이 인수로 전달된 경우 프로퍼티를 객체에 추가한다.
+- 그리고 인수로 전달받은 프로토타입을 자신이 생성한 객체의 `[[prototype]]` 내부 슬롯에 할당한 다음, 생성한 객체를 반환한다.
+- 즉, 프로토타입은 추상 연산에 전달되는 인수에 의해 결정되는데, 이 인수는 객체가 생성되는 시점에 객체 생성 방식에 의해 결정된다.
+
+### 객체 리터럴에 의해 생성된 객체의 프로토타입
+
+- 객체 리터럴에 의해 생성된 객체의 프로토타입은 Object.prototype이다.
+- 생성된 객체는 Object.prototype의 프로퍼티와 메서드를 자신의 자산인 것처럼 자유롭게 사용할 수 있다.
+
+### Object 생성자 함수에 의해 생성된 객체의 프로토타입
+
+- 객체 리터럴에 의해 생성된 객체와 마찬가지로 Object.prototype을 프로토타입으로 갖게 된다.
+- 객체 리터럴과 Object 생성자 함수에 의한 객체 생성 방식의 차이는 프로퍼티 추가 방식에 있다.
+- 객체 리터럴 방식은 객체 리터럴 내부에 프로퍼티를 추가하지만 Object 생성자 함수 방식은 일단 빈 객체를 생성한 이후 프로퍼티를 추가해야 한다.
+
+### 생성자 함수에 의해 생성된 객체의 프로토타입
+
+- 추상 연산에 의해 생성자 함수와 생성자 함수의 prototype 프로퍼티에 바인딩되어 있는 객체와 생성된 객체 사이에 연결이 만들어진다.
+- 일반 객체와 같이 프로토타입에도 프로퍼티를 추가/삭제할 수 있다.
+- 이렇게 추가/삭제된 프로퍼티는 프로토타입 체인에 즉각 반영된다.
+
+## 프로토타입 체인
+
+- JS는 객체의 프로퍼티에 접근하려고 할 때 해당 객체에 접근하려는 프로퍼티가 없다면 `[[Prototype]]` 내부 슬롯의 참조를 따라 자신의 부모 역할을 하는 프로토타입의 프로퍼티를 순차적으로 검색한다.
+- 이를 프로토타입 체인이라 한다. 프로토타입 체인은 자바스크립트가 객체지향 프로그래밍의 상속을 구현하는 메커니즘이다.
+- `me.hasOwnProperty('name')`과 같이 메서드를 호출하면 다음과 같은 과정을 거친다.
+  1.  먼저 me 객체에서 hasOwnProperty 메서드를 검색한다. 없으므로 프로토타입 체인을 따라 내부 슬롯에 바인딩되어 있는 프로토타입으로 이동하여 다시 메서드를 검색한다.
+  2.  Person.prototype에도 메서드가 없으므로 Object.prototype으로 이동하여 메서드를 검색한다.
+  3.  Object.prototype에는 메서드가 존재하므로 JS 엔진이 Object.prototype.hasOwnProperty 메서드를 호출한다. 이때 메서드의 this에는 me 객체가 바인딩된다.
+- 프로토타입 체인 최상위에 위치하는 객체는 언제나 Object.prototype이다. 모든 객체는 Object.prototype을 상속받는다.
+- Object.prototype을 **프로토타입 체인의 종점**이라 한다. Object.prototype의 `[[prototype]]` 내부 슬롯의 값은 null이다.
+- Object.prototype에서도 프로퍼티를 검색할 수 없는 경우 에러가 아닌 undefined를 반환한다.
+
+- 프로토타입 체인은 상속과 프로퍼티 검색을 위한 메커니즘이라고 할 수 있다.
+- 스코프 체인은 식별자 검색을 위한 메커니즘이라고 할 수 있다.
+
+`me.hasOwnProperty('name')`
+
+1. 먼저 스코프 체인에서 me 식별자를 검색한다. me 식별자는 전역에서 선언되었으므로 전역 스코프에서 검색된다.
+2. me 객체의 프로토타입 체인에서 hasOwnProperty 메서드를 검색한다.  
+   -> 스코프 체인과 프로토타입 체인은 서로 연관없이 별도로 동작하는 것이 아니라 서로 협력하여 식별자와 프로퍼티를 검색하는 데 사용된다.
+
+### 출처
+
+모던 자바스크립트 Deep Dive
