--- a/_posts/2021-09-26-0920-0926.md
+++ b/_posts/2021-09-26-0920-0926.md
@@ -208,3 +208,85 @@ console.log(
 - 처음에는 이 문제를 union&find 문제로 풀어야 하나 생각했다.
 - 하지만 DFS 만으로도 문제를 해결할 수 있었다.
 - 이 문제의 핵심은 외부에서 DFS를 반복문으로 실행하는 것. 반복문이 한 번 돌때마다 들린적 없는 곳이라면, 들렸다고 배열에 체크하고 다시 DFS를 실행했다. 그러면 DFS에서 연관있는 곳들을 체크 배열에 체크해준다. 이를 처음부터 끝까지 반복문을 돌리고 나면 몇 개로 네트워크가 떨어져 있는지 구할 수 있다.
+
+## 0926
+
+# 일 - 알고리즘 문제 풀이
+
+오늘은 Union & Find 개념을 학습하고 이전에 풀었던 문제를 다시 풀었다.  
+MST와 크루스칼 알고리즘에 대해서도 복습하고, 그래프 관련 문제를 풀어보았다.
+
+## 복습
+
+핵심은 Find 함수에 있다.
+
+```javascript
+function Find(v) {
+  if (unf[v] === v) return v;
+  else return (unf[v] = Find(unf[v]));
+}
+```
+
+- 처음에 노드를 인덱스 값으로 초기화한다. (각자 다른 집합을 가지고 있다.)
+- Union 함수를 쓰거나, 서로 집합이 다르면 같게 만들어주는 로직을 작성하여 노드를 연결해준다.
+- Find 함수는 노드가 속한 소속을 찾아준다. 이를 활용하여 연결 되었는지, 안되었는지 확인할 수 있다.
+- MST는 그래프에서 모든 정점을 포함하는 트리인 스패닝 트리 중 가중치가 최소인 트리이다.
+  - 이는 n개의 노드가 있다면 n-1개의 간선으로 이어져야 한다.
+  - 크루스칼 알고리즘을 적용하기 위해서는 가중치를 오름차순으로 정렬한 뒤, Find 함수로 두 노드가 연결되었는지 확인하면서 안된 경우에만 이어주고 가중치를 더해주면 된다.
+
+## 프로그래머스 Level3 - 여행경로
+
+```javascript
+function solution(n, edge) {
+  let answer = 0;
+  const ch = Array.from({ length: n + 1 }, () => 0);
+  const graph = Array.from({ length: n + 1 }, () => []);
+  let tmp = [];
+
+  for (let [a, b] of edge) {
+    graph[a].push(b);
+    graph[b].push(a);
+  }
+
+  function BFS() {
+    let queue = [];
+    queue.push(1);
+
+    while (queue.length) {
+      let len = queue.length;
+      tmp = [];
+      for (let i = 0; i < len; i++) {
+        let node = queue.shift();
+        tmp.push(node);
+        for (let x of graph[node]) {
+          if (ch[x] === 0) {
+            ch[x] = 1;
+            queue.push(x);
+          }
+        }
+      }
+    }
+  }
+  ch[1] = 1;
+  BFS();
+  answer = tmp.length;
+  return answer;
+}
+
+console.log(
+  solution(6, [
+    [3, 6],
+    [4, 3],
+    [3, 2],
+    [1, 3],
+    [1, 2],
+    [2, 4],
+    [5, 2],
+  ])
+);
+```
+
+- 어제 오늘 학습한 그래프와 BFS를 조합하여 문제를 해결하였다.
+- 양방향 그래프이므로 이를 생각해서 그래프에 삽입하였다.
+- 만약 갔던 노드라면 BFS 특성상 최단거리가 될 수 없으므로 패스하기 위해서 배열을 사용하였다.
+- 짧은 시간에 학습하여 프로그래머스 3단계 문제들을 여러개 푸니 성취감이 상당했다.
