--- a/_posts/2021-09-28-0927-1003.md
+++ b/_posts/2021-09-28-0927-1003.md
@@ -143,3 +143,77 @@ function solution(number, k) {
 - 아이디어를 생각해내기가 쉽지 않은 문제였다.
 - 순서를 고정한 채로 가장 큰 수를 만들어내야 하므로, 새로 들어오는 값보다 기존 값이 작으면서 배열이 비어있지 않고 뺀 개수가 k보다 작다면 값을 뺐다. 그 외에는 push
 - 그리고나서도 tc 하나에 걸렸는데, 이는 그외의 경우에 모두 push 해주므로 발생한 문제이다. 배열의 길이가 목표 값만큼 찼다면 더이상 push 하지 말아야 한다.
+
+## 0929
+
+# 58일 차
+
+## 투포인터
+
+조금 까다롭고 쉽지 않다고 생각되는 유형의 투포인터 문제가 있어서 정리하고자 한다.
+
+## 연속 부분수열 3
+
+N개의 수로 이루어진 수열이 주어집니다.
+이 수열에서 연속부분수열의 합이 특정숫자 M이하가 되는 경우가 몇 번 있는지 구하는 프로그램을 작성하세요.
+만약 N=5, M=5이고 수열이 다음과 같다면
+13123
+합이 5이하가 되는 연속부분수열은 {1}, {3}, {1}, {2}, {3}, {1, 3}, {3, 1}, {1, 2}, {2, 3}, {1, 3, 1}로 총 10가지입니다.
+
+```javascript
+function solution(nums, m) {
+  let answer = 0;
+  let lt = 0;
+  let sum = 0;
+
+  for (let rt = 0; rt < nums.length; rt++) {
+    sum += nums[rt];
+
+    while (sum > m) {
+      sum -= nums[lt++];
+    }
+
+    answer += rt - lt + 1;
+  }
+
+  return answer;
+}
+```
+
+- 예전에 풀었던 문제지만, 오랜만에 다시 풀어보니 전혀 감이 잡히지 않아서 다음에 풀었을 때는 막히지 않기 위해 한 번 더 정리한다.
+- 이 문제의 핵심 개념은 일단 rt에서는 무조건 어떤 일을 수행하고, 조건에 어긋났을 때 while 문으로 문제가 해결될 때까지 lt를 조정하는 것이다.
+- 그 상태로 answer에 필요한 작업을 진행한다. (조건이 완성된 채)
+
+이 문제와 비슷한 식의 방법을 적용하는 문제를 마주쳤다.
+
+## 최대 길이 연속부분수열
+
+0과 1로 구성된 길이가 N인 수열이 주어집니다. 여러분은 이 수열에서 최대 k번을 0을 1로 변경할 수 있습니다. 여러분이 최대 k번의 변경을 통해 이 수열에서 1로만 구성된 최대 길이의 연속부분수열을 찾는 프로그램을 작성하세요.
+만약 길이가 14인 다음과 같은 수열이 주어지고 k=2라면
+11001101101101
+여러분이 만들 수 있는 1이 연속된 최대 길이의 연속부분수열은 1 1 0 0 1 1 1 1 1 1 1 1 0 1 이며 그 길이는 8입니다.
+
+```javascript
+function solution(nums, k) {
+  let answer = 0;
+  let lt = 0;
+  let cnt = 0;
+
+  for (let rt = 0; rt < nums.length; rt++) {
+    if (nums[rt] === 0) cnt++;
+
+    while (cnt > k) {
+      if (nums[lt] === 0) cnt--;
+      lt++;
+    }
+
+    answer = Math.max(answer, rt - lt + 1);
+  }
+
+  return answer;
+}
+```
+
+- 위의 문제와 비슷한 방법으로 우선 rt에서는 0일 때 바꾼 횟수를 증가시키고, lt에서는 cnt가 필요 이상 증가하면 줄여준다.
+- 그리고 rt와 lt를 이용해 정답을 도출한다.
+- **연속부분수열** 관련 문제에서는 투포인터 알고리즘을 가장 먼저 떠올려야겠다.
