--- a/_posts/2021-09-28-0927-1003.md
+++ b/_posts/2021-09-28-0927-1003.md
@@ -496,3 +496,111 @@ const fibonacci = function (max) {
 - 지연 평가는 데이터가 필요한 시점 이전까지는 미리 데이터를 생성하지 않다가 데이터가 필요한 시점이 되면 그때야 비로소 데이터를 생성하는 기법이다.
   - 예를 들어 for ... of 문의 경우 이터러블을 순회할 때 이터레이터의 next 메서드를 호출하는데 이때 데이터가 생성된다.
 - 지연 평가를 사용하면 불필요한 데이터를 미리 생성하지 않고 필요한 데이터를 필요한 순간에 생성하므로 빠른 실행 속도를 기대할 수 있고 불필요한 메모리를 소비하지 않는다는 장점이 있다.
+
+### 출처
+
+모던 자바스크립트 Deep Dive
+
+## 1003
+
+# 35장 스프레드 문법
+
+- 스프레드 문법은 하나로 뭉쳐 있는 여러 값들의 집합을 펼쳐서 개별적인 값들의 목록으로 만든다.
+- 스프레드 문법을 사용할 수 있는 대상은 이터러블에 한정된다.
+- 스프레드 문법의 결과는 값이 아니라 값들의 목록이다.
+  -> ... 이 피연산자를 연산하여 값을 생성하는 연산자가 아님을 의미하고, 따라서 스프레드 문법의 결과는 변수에 할당할 수 없다.
+- 쉼표로 구분한 값의 목록을 사용하는 문맥에서만 사용할 수 있다.
+  - 함수 호출문의 인수 목록
+  - 배열 리터럴의 요소 목록
+  - 객체 리터럴의 프로퍼티 목록
+
+## 함수 호출문의 인수 목록에서 사용하는 경우
+
+- Math.max 메서드는 매개변수 개수를 확정할 수 없는 가변 인자 함수다. 여러 개의 숫자를 인수로 전달받아 인수 중에서 최대값을 반환한다.
+- 배열을 인수로 전달하면 최대값을 구할 수 없으므로 NaN을 반환한다.
+- 이 문제를 해결하기 위해서는 스프레드 문법을 사용한다.
+
+```javascript
+cosnt arr = [1, 2, 3];
+const max = Math.max(...arr);
+```
+
+- 스프레드 문법은 Rest 파라미터와 형태가 동일하여 혼동할 수 있다.
+  - Rest 파라미터는 함수에 전달된 인수들의 목록을 배열로 전달받기 위해 매개변수 이름 앞에 ... 을 붙이는 것이다.
+  - 스프레드 문법은 여러 값이 하나로 뭉쳐 있는 배열과 같은 이터러블을 펼쳐서 개별적인 값들의 목록을 만드는 것이다.
+  - 따라서 Rest 파라미터와 스프레드 문법은 서로 반대의 개념이다.
+
+## 배열 리터럴 내부에서 사용하는 경우
+
+### concat
+
+- ES5에서 2개의 배열을 1개의 배열로 결합하고 싶은 경우 배열 리터럴만으로 해결할 수 없고 concat 메서드를 사용해야 했다.
+- 스프레드 문법을 사용하면 별도의 메서드를 사용하지 않고 배열 리터럴만으로 2개의 배열을 결합할 수 있다.
+
+```javascript
+const arr = [...[1, 2], ...[3, 4]];
+```
+
+### splice
+
+- 배열의 중간에 다른 배열의 요소들을 추가하거나 제거하려면 splice 메서드를 사용한다.
+- 이때 세 번째 인수로 배열을 전달하면 배열 자체가 추가된다.
+- 배열을 목록으로 해체하여 전달해야 하는데, 스프레드 문법을 사용하면 간결하고 가독성 좋게 표현할 수 있다.
+
+```javascript
+const arr1 = [1, 4];
+const arr2 = [2, 3];
+arr1.splice(1, 0, ...arr2);
+```
+
+### 배열 복사
+
+ES5에서 배열을 복사하려면 slice 메서드를 사용했으나, 스프레드 문법을 사용하면 간결하고 가독성 좋게 표현할 수 있다.
+
+```javascript
+const origin = [1, 2];
+const copy = [...origin];
+```
+
+- 원본 배열의 각 요소를 얕은 복사하여 새로운 복사본을 생성한다.
+
+### 이터러블을 배열로 변환
+
+- 이터러블이면서 유사 배열 객체인 arguments를 배열로 변환하기 위해 스프레드 문법을 사용할 수 있다.
+- 위의 경우 더 나은 방법은 Rest 파라미터를 사용하는 것이다.
+- 이터러블이 아닌 유사 배열 객체는 스프레드 문법의 대상이 될 수 없다.
+- 이터러블이 아닌 유사 배열 객체를 배열로 변경하려면 Array.from 메서드를 사용한다.
+
+## 객체 리터럴 내부에서 사용하는 경우
+
+- Rest 프로퍼티와 함께 제안되어 있는 스프레드 프로퍼티를 사용하면 객체 리터럴의 프로퍼티 목록에서도 스프레드 문법을 사용할 수 있다.
+- 스프레드 문법의 대상은 이터러블이어야 하지만 스프레드 프로퍼티 제안은 일반 객체를 대상으로도 스프레드 문법의 사용을 허용한다.
+
+```javascript
+// 스프레드 프로퍼티
+// 객체 복사(얕은 복사)
+const obj = { x: 1, y: 2 };
+const copy = { ...obj };
+console.log(copy); // { x: 1, y: 2 }
+console.log(obj === copy); // false
+
+// 객체 병합. 프로퍼티가 중복되는 경우 뒤에 위치한 프로퍼티가 우선권을 갖는다.
+const merged = { ...{ x: 1, y: 2 }, ...{ y: 10, z: 3 } };
+console.log(merged); // { x: 1, y: 10, z: 3 }
+
+// 특정 프로퍼티 변경
+const changed = { ...{ x: 1, y: 2 }, y: 100 };
+// changed = { ...{ x: 1, y: 2 }, ...{ y: 100 } }
+console.log(changed); // { x: 1, y: 100 }
+
+// 프로퍼티 추가
+const added = { ...{ x: 1, y: 2 }, z: 0 };
+// added = { ...{ x: 1, y: 2 }, ...{ z: 0 } }
+console.log(added); // { x: 1, y: 2, z: 0 }
+```
+
+- 스프레드 프로퍼티는 Object.assign 메서드를 대체할 수 있는 간편한 문법이다.
+
+### 출처
+
+모던 자바스크립트 Deep Dive
