--- a/_posts/2022-04-07-0404-0410.md
+++ b/_posts/2022-04-07-0404-0410.md
@@ -152,3 +152,98 @@ function foo(abc: ABC) {
 - for-in 문을 사용하면, 객체의 정의에 없는 속성이 갑자기 등장할 수 있다.
 - 실제 작업에서는 Object.prototype에 순회 가능한 속성을 절대로 추가하면 안 된다.
 - kyeof 선언은 상수이거나 추가적인 키 없이 정확한 타입을 원하는 경우 적절하고, Object.entries는 더욱 일반적으로 쓰이지만 키와 값의 타입을 다루기 까다롭다.
+
+<br />
+<br />
+<br />
+
+## 0405
+
+# useRef
+
+`const refContainer = useRef(initialValue);`  
+useRef는 current 프로퍼티가 전달된 인자(initialValue)로 초기화된 변경 가능한 ref 객체를 반환한다.  
+반환된 객체는 컴포넌트의 전 생애주기를 통해 유지된다.
+
+React에서 ref는 주로 DOM 노드 참조 목적으로 사용되지만, 컴포넌트 렌더링에 영향을 주지 않는 값 참조 목적으로 사용되기도 한다.  
+`React.useRef()` 훅은 함수 컴포넌트 내부에서 가변 값을 유지하는 데에 편리하다.  
+개념적으로, class의 인스턴스 변수와 ref를 비슷하게 생각할 수 있다.  
+useRef는 순수 자바스크립트 객체를 생성하는데, 매번 렌더링을 할 때 동일한 ref 객체를 제공한다.
+
+`React.useState()` 훅과 달리, `useRef()` 훅은 현재 값이 변경되어도 컴포넌트가 다시 렌더링되지 않아서 불필요한 렌더링을 방지하고, 애플리케이션 성능을 최적화 할 수 있다.
+
+```javascript
+function Timer() {
+  const intervalRef = useRef();
+  useEffect(() => {
+    const id = setInterval(() => {
+      // ...
+    });
+    intervalRef.current = id;
+    return () => {
+      clearInterval(intervalRef.current);
+    };
+  });
+
+  // ...
+}
+```
+
+인터벌을 설정하고 싶다면 ref가 필요하지 않지만, 이벤트 처리에서 인터벌을 지우고 싶을 때 유용하다.
+
+```javascript
+function handleCancelClick() {
+  clearInterval(intervalRef.current);
+}
+```
+
+지연 초기화를 수행하지 않는 한, 렌더링 중에 ref 설정을 피해야 한다.  
+일반적으로 이벤트 처리와 effect에서 ref를 수정하는 것이 좋다.
+
+# useLayoutEffect
+
+useEffect 훅과 사용법이 동일하다. 거의 비슷하지만 실행되는 시기가 다르다.  
+페이지 로드 차단을 방지하기 위해 DOM이 렌더링 된 이후 useEffect 훅에 설정된 콜백함수가 실행되면 위치 및 스타일 적용에 문제가 생길 수 있다.  
+이러한 문제를 해결해야 할 경우 useLayoutEffect 훅을 사용한다.
+
+useLayoutEffect 훅은 DOM이 렌더링 되고 페인팅 되기 직전에 동기적으로 실행된다. 반면, useEffect는 DOM 페인팅 이후 비동기적으로 실행된다.  
+그렇기에 useEffect는 DOM에 영향을 미치는 코드가 있다면 다시 그리므로 화면 깜빡임이 발생한다.  
+반면, useLayoutEffect는 화면에 그리기 전에 수행되므로 DOM에 영향을 미치는 코드를 넣어도 화면 깜빡임이 발생하지 않는다.  
+하지만 동기적인 동작에서 발생하는 단점을 가지고 있다. 만약 useLayoutEffect에서 오랜 시간이 소요된다고 가정하면 유저는 그 시간 동안 빈 화면을 보게 되는 것이다.
+
+그렇기에 useEffect를 사용하여 설계하다가 UX적으로 문제가 발생하면 useLayoutEffect를 적절히 섞어서 사용하는 것이 좋다.
+
+## useLayoutEffect 문제점
+
+SSR 환경에서 사용할 경우 에러가 발생한다.  
+이를 수정하기 위해서는 로직을 useEffect로 이동하거나 클라이언트 렌더링이 완료될 때까지 컴포넌트 노출을 지연하는 방법이 있다.
+
+서버에서 렌더링된 HTML에서 layoutEffect가 필요한 컴포넌트를 배제하고 싶다면, `showChild && <Child />`를 사용하여 조건적으로 렌더링 하고 `useEffect(() => { setShowChild(true); }, [])`를 사용하여 노출을 지연시킬 수 있다.  
+이런 방법으로 JS 코드가 주입되기 전에 깨져 보일 수 있는 UI는 표현되지 않게 된다.
+
+SSR에서도 사용하고 싶은 경우 렌더링이 되어 window 객체가 생기는지에 따라 useEffect를 사용할지 useLayoutEffect를 사용할지 결정할 수 있다.
+
+```javascript
+// 커스텀 훅
+import { useEffect, useLayoutEffect } from "react";
+
+export const useIsomorphicEffect = () => {
+  return typeof window !== "undefined" ? useLayoutEffect : useEffect;
+};
+
+// 커스텀 훅 사용
+import { useEffect, useLayoutEffect } from "react";
+import { useIsomorphicEffect } from "./useIsomorphicEffect";
+
+const App = () => {
+  const isomorphicEffect = useIsomorphicEffect();
+
+  isomorphicEffect(() => {
+    // do something you want
+  }, []);
+
+  return <div>Hellow world</div>;
+};
+```
+
+커스텀 훅으로 만들어 두어 사용할 부분에서 Effect로 사용하면 된다.
