--- a/_posts/2022-04-07-0404-0410.md
+++ b/_posts/2022-04-07-0404-0410.md
@@ -563,3 +563,103 @@ function handleDrag(eDown: Event) {
 ```
 
 컴파일을 실행하면 각 .ts 파일에 대해 .js와 .js.map 두 개의 파일을 생성한다. .js.map 파일이 바로 소스맵이다.
+
+<br />
+<br />
+<br />
+
+## 0408
+
+# 모던 자바스크립트로 작성하기
+
+58장부터는 타입스크립트로 마이그레이션 하는 데에 필요한 조언들을 배울 수 있었다.  
+타입스크립트는 코드를 특정 버전의 자바스크립트로 컴파일하는 기능도 가지고 있기에 트랜스파일러로 사용할 수 있다.
+
+- ECMAScript 모듈 사용하기
+- 프로토타입 대신 클래스 사용하기
+- var 대신 let/const 사용하기
+- for(;;) 대신 for-of 또는 배열 메서드 사용하기
+- 함수 표현식보다 화살표 함수 사용하기
+- 단축 객체 표현과 구조 분해 할당 사용하기
+- 함수 매개변수 기본값 사용하기
+- 저수준 프로미스나 콜백 대신 async/await 사용하기
+- 연관 배열에 객체 대신 Map과 Set 사용하기
+- 타입스크립트에 use strict 넣지 않기
+
+# 타입스크립트 도입 전에 @ts-check와 JSDoc으로 시험해 보기
+
+본격적으로 타입스크립트로 전환하기에 앞서, @ts-check 지시자를 사용하면 타입스크립트 전환시에 어떤 문제가 발생하는지 미리 시험해 볼 수 있다.  
+@ts-check 지시자를 사용하여 타입 체커가 파일을 분석하고, 발견된 오류를 보고하도록 지시한다.  
+주의할 점은 @ts-check 지시자는 매우 느슨한 수준으로 타입 체크를 수행한다는 것이다.
+
+### 선언되지 않은 전역 변수
+
+어딘가에 숨어 있는 변수라면, 변수를 제대로 인식할 수 있게 별도의 타입 선언 파일을 만들어야 한다.  
+types.d.ts 파일을 만든 뒤 declare 키워드를 활용하여 변수를 선언하면 오류가 해결된다.
+
+### 알 수 없는 라이브러리
+
+서드파티 라이브러리를 사용하는 경우, 서드파티 라이브러리의 타입 정보를 알아야 한다.  
+예를 들어, 제이쿼리를 사용하면 @ts-check 지시자를 사용하면 제이쿼리를 사용한 부분에서 오류가 발생한다.  
+제이쿼리 타입 선언을 설치하면 제이쿼리의 사양 정보를 참조하게 된다.
+
+### DOM 문제
+
+JSDoc을 사용하여 타입 단언을 대체할 수 있다.
+
+```javascript
+// @ts-check
+const ageEl = /** @type {HTMLInputElement} */ (document.getElementById("age"));
+ageEl.value = "12";
+```
+
+### 부정확한 JSDoc
+
+프로젝트에 이미 JSDoc 스타일의 주석을 사용 중이었다면, @ts-check 지시자를 설정하는 순간부터 기존 주석에 타입 체크가 동작하게 되고 갑자기 수많은 오류가 발생하게 될 것이다.  
+이때는 당황하지 말고 타입 정보를 차근차근 추가해 나가면 된다.
+
+# allowJs로 타입스크립트와 자바스크립트 같이 사용하기
+
+- 점진적 마이그레이션을 위해 JS와 TS를 동시에 사용할 수 있게 allowJs 컴파일러 옵션을 사용한다.
+- 대규모 마이그레이션 작업을 시작하기 전에, 테스트와 빌드 체인에 타입스크립트를 적용해야 한다.
+
+# 의존성 관계에 따라 모듈 단위로 전환하기
+
+점진적 마이그레이션을 할 때는 모듈 단위로 각개격파하는 것이 이상적이다.  
+그런데 한 모듈을 골라서 타입 정보를 추가하면, 해당 모듈이 의존하는 모듈에서 비롯되는 타입 오류가 발생하게 된다.  
+의존성과 관련된 오류 없이 작업하려면, 다른 모듈에 의존하지 않는 최하단 모듈부터 작업을 시작해서 의존성의 최상단에 있는 모듈을 마지막으로 완성해야 한다.
+
+프로젝트 내에 존재하는 모듈은 서드파티 라이브러리에 의존하지만 서드파티 라이브러리는 해당 모듈에 의존하지 않기 때문에, 서드파티 라이브러리 타입 정보를 가장 먼저 해결해야 한다.  
+일반적으로 @types 모듈을 설치하면 된다.  
+외부 API를 호출하는 경우도 있기 때문에 외부 API의 타입 정보도 추가해야 한다.
+
+마이그레이션할 때는 타입 정보 추가만 하고, 리팩터링을 해서는 안 된다.
+
+### 선언되지 않은 클래스 멤버
+
+자바스크립트는 클래스 멤버 변수를 선언할 필요가 없지만, 타입스크립트에서는 명시적으로 선언해야 한다.  
+이는 빠른 수정 기능으로 간단히 해결할 수 있다.  
+빠른 수정을 적용한 후에 속성을 훑어보고 any로 추론된 부분을 직접 수정해야 한다.  
+잘못된 설계를 발견했을 때, 잘못된 설계 그대로 타입스크립트로 전환하는 것은 납득하기 어려운 일이다. 하지만 리팩터링을 하면 안 된다.
+
+### 타입이 바뀌는 값
+
+객체에 프로퍼티를 추가하는 코드는 JS에서는 문제 없지만, TS에서는 문제가 발생한다.  
+이때 한 번에 객체를 생성하면 오류를 해결할 수 있다.  
+한꺼번에 생성하기 곤란한 경우에는 임시 방편으로 타입 단언문을 사용할 수 있다. 마이그레이션이 완료된 이후에는 타입 선언문을 사용하여 문제를 제대로 해결하자.
+
+마지막 단계로, 테스트 코드를 타입스크립트로 전환하면 된다.  
+로직 코드가 테스트 코드에 의존하지 않기 때문에, 테스트 코드는 항상 의존성 관계도의 최상단에 위치하며 마이그레이션의 마지막 단계가 되는 것은 자연스러운 일이다.  
+그리고 최하단의 모듈부터 TS로 전환하는 와중에도 테스트 코드는 변경되지 않았고, 테스트를 수행할 수 있었을 것이다.  
+마이그레이션 기간 중에 테스트를 수행할 수 있다는 것은 엄청난 이점이다.
+
+# 마이그레이션의 완성을 위해 noImplicitAny 설정하기
+
+프로젝트 전체를 .ts로 전환한 뒤, 마지막 단계는 noImplicitAny를 설정하는 것이다.  
+noImplicitAny가 설정되지 않은 상태에서는 타입 선언에서 비롯되는 실제 오류가 숨어 있기 때문에 마이그레이션이 완료되었다고 할 수 없다.
+
+처음에는 noImplicitAny를 로컬에만 설정하고 작업하는 것이 좋다.  
+왜냐하면 원격에서는 설정에 변화가 없기 때문에 빌드가 실패하지 않기 때문이다.  
+로컬에서만 오류로 인식되기 때문에, 수정된 부분만 커밋할 수 있어서 점진적 마이그레이션이 가능하다.
+
+엄격한 타입 체크를 적용하기 전에 팀원들이 타입스크립트에 익숙해질 수 있도록 타입 체크 설정을 점진적으로 적용해야 한다.
